Fix feedback dialog at login screen for mash

Browser code was attempting to reparent the feedback app window (owned
by the browser) to the login window (owned by ash).

Instead, explicitly create the feedback app window in the lock screen
modal container (so it appears on top of the login screen) and make it
modal (so you can't switch to the GAIA login dialog, which is in the
same container).

Also, don't try to access MultiUserWindowManager at the login screen,
since it doesn't get created until later.

This fixes the dialog under both single-process and multi-process mash.

Bug: 898560
Test: browser_tests LoginFeedbackTest.Basics
Change-Id: I2fe91b2f65e8817aac2a91d28ea66acb9b6a20ab
Reviewed-on: https://chromium-review.googlesource.com/c/1298198
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602766}
Former-commit-id: afe65cf118cec7824601a6699ada9ebed62b0992