chrome/browser/ui/views/apps/chrome_native_app_window_views_aura_ash.h
@@ -78,6 +78,7 @@ class ChromeNativeAppWindowViewsAuraAsh
   // WidgetDelegate:
   views::NonClientFrameView* CreateNonClientFrameView(
       views::Widget* widget) override;
+  ui::ModalType GetModalType() const override;
 
   // NativeAppWindow:
   void SetFullscreen(int fullscreen_types) override;
